# study_planner

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/: courses.json
study_planner/: CMakeLists.txt  Course.cpp  Course.h  CourseCard.cpp  CourseCard.h  CoursePlan.h  CoursePlanDialog.cpp  CoursePlanDialog.h  CourseSelectCard.cpp  CourseSelectCard.h  CourseSelector.cpp  CourseSelector.h  CourseTimeLine.cpp  CourseTimeLine.h  ExamPlan.cpp  ExamPlan.h  FileMenu.cpp  FileMenu.h  ParticipationPlan.cpp  ParticipationPlan.h  Period.cpp  Period.h  StudyPlan.cpp  StudyPlan.h  study_planner.cpp  study_planner.h
